fix overflow not being displayed
same fix is already in allegro master

--- a/src/client/components/filter-menu/string-filter-menu/string-filter-menu.scss
+++ b/src/client/components/filter-menu/string-filter-menu/string-filter-menu.scss
@@ -71,9 +71,7 @@
         height: 100%;
 
         .label {
-          display: inline-block;
-          vertical-align: top;
-          padding-top: 4px;
+          vertical-align: middle;
         }
       }
 
